@@ -6,24 +6,21 @@
 
     <groupId>org.openjfx</groupId>
     <artifactId>gradefx</artifactId>
-    <version>0.9.6</version>
+    <version>0.9.7</version>
     <packaging>jar</packaging>
 
     <name>GradeFX</name>
 
     <properties>
+		<project.vendor>Fabian Kaschta</project.vendor>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>23</maven.compiler.release>
-        <javafx.version>23</javafx.version>
+        <java.version>24</java.version>
+        <javafx.version>24</javafx.version>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
-        <gluonfx.plugin.version>1.0.27</gluonfx.plugin.version>
-        <compiler.plugin.version>3.8.1</compiler.plugin.version>
-        <jar.plugin.version>3.4.2</jar.plugin.version>
-        <assembly.plugin.version>3.7.1</assembly.plugin.version>
-        <native.plugin.version>0.11.0</native.plugin.version>
-        <main.class>org.openjfx.gradefx.GradeFXMain</main.class>
-        <fxapp.class>org.openjfx.gradefx.view.GradeFXApplication</fxapp.class>
-        <resources.path>org.openjfx.gradefx.*,org.openjfx.kafx.*</resources.path>
+        <jpackage.plugin.version>1.6.6</jpackage.plugin.version>
+        <module.path>${project.groupId}.${project.artifactId}</module.path>
+        <main.class>${module.path}.GradeFXMain</main.class>
     </properties>
     
 	<repositories>
@@ -54,101 +51,120 @@
 			<artifactId>kafx</artifactId>
 			<version>0.9.7</version>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		-->
     </dependencies>
 
     <build>
+
         <plugins>
-            <!-- compile -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${compiler.plugin.version}</version>
-            </plugin>
-            <!-- jar with manifest -->
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-jar-plugin</artifactId>
-	            <version>${jar.plugin.version}</version>
-	            <configuration>
-	                <archive>
-	                    <manifest>
-	                        <mainClass>${main.class}</mainClass>
-	                        <addClasspath>true</addClasspath>
-	                    </manifest>
-	                </archive>
-	            </configuration>
-	        </plugin>
-            <!-- run -->
+            <!-- javafx:run, javafx:jlink -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.plugin.version}</version>
                 <configuration>
-                    <mainClass>${main.class}</mainClass>
+                    <mainClass>${project.groupId}.${project.artifactId}/${main.class}</mainClass>
                 </configuration>
             </plugin>
-            <!-- fat jar -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>${assembly.plugin.version}</version>
-	            <configuration>
-	                <descriptorRefs>
-	                    <descriptorRef>jar-with-dependencies</descriptorRef>
-	                </descriptorRefs>
-			        <archive>
-			            <manifest>
-			                <addClasspath>true</addClasspath>
-			                <mainClass>${main.class}</mainClass>
-			            </manifest>
-			        </archive>
-					<finalName>${project.name}-v${project.version}-full</finalName>
-					<appendAssemblyId>false</appendAssemblyId>
-	            </configuration>
-	            <executions>
-	                <execution>
-	                    <id>make-assembly</id>
-	                    <phase>package</phase>
-	                    <goals>
-	                        <goal>single</goal>
-	                    </goals>
-	                </execution>
-	            </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.gluonhq</groupId>
-                <artifactId>gluonfx-maven-plugin</artifactId>
-                <version>${gluonfx.plugin.version}</version>
-                <configuration>
-                    <target>${gluonfx.target}</target>
-                    <mainClass>${main.class}</mainClass>
-                    <reflectionList>${fxapp.class}</reflectionList>
-                    <resourcesList>${resources.path}</resourcesList>
-        			<javaStaticSdkVersion>21</javaStaticSdkVersion>
-        			<javafxStaticSdkVersion>21</javafxStaticSdkVersion>
-                </configuration>
-            </plugin>
+            <!-- jpackage -->
+			<plugin>
+				<groupId>org.panteleyev</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>${jpackage.plugin.version}</version>
+
+				<configuration>
+					<name>${project.name}</name>
+					<appVersion>${project.version}</appVersion>
+					<vendor>${project.vendor}</vendor>
+					<runtimeImage>target/image</runtimeImage>
+					<module>${module.path}/${main.class}</module>
+					<modulePaths>
+						<modulePath>target</modulePath>
+					</modulePaths>
+					<destination>target/dist</destination>
+					<javaOptions>
+						<option>--enable-preview</option>
+						<option>-Dfile.encoding=${project.build.sourceEncoding}</option>
+					</javaOptions>
+				</configuration>
+			</plugin>
+
         </plugins>
     </build>
-
+	
     <profiles>
         <profile>
-            <id>android</id>
-            <properties>
-                <gluonfx.target>android</gluonfx.target>
-            </properties>
+            <id>win</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>${jpackage.plugin.version}</version>
+                        <configuration>
+                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.ico</icon>
+                            <winMenu>true</winMenu>
+                            <winDirChooser>true</winDirChooser>
+                            <winShortcut>true</winShortcut>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
-            <id>ios</id>
-            <properties>
-                <gluonfx.target>ios</gluonfx.target>
-            </properties>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>${jpackage.plugin.version}</version>
+                        <configuration>
+                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>${jpackage.plugin.version}</version>
+                        <configuration>
+                            <!--<type>APP_IMAGE</type>-->
+                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
+                            <linuxShortcut>true</linuxShortcut>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
+
     
 </project>
